--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,31 @@ allprojects {
 		mavenCentral()
 	}
 
+	dependencyManagement {
+		// hutool工具类
+		imports {
+			mavenBom 'cn.hutool:hutool-bom:5.8.35'
+		}
+		dependencies {
+//			dependencySet(group: 'me.ziyframework', version: '3.3.3') {
+//				entry("core-spring-boot-starter")
+//				entry("redis-spring-boot-starter")
+//				entry("web-spring-boot-starter")
+//			}
+
+			// 常用工具类
+			dependency 'com.google.guava:guava:33.4.0-jre'
+
+			dependencySet(group: 'cn.dev33', version: '1.39.0') {
+				entry("sa-token-spring-boot-starter")
+			}
+
+			dependencySet(group: 'org.springdoc', version: '2.8.1') {
+				entry("springdoc-openapi-starter-webmvc-ui")
+			}
+		}
+	}
+
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter'
 		compileOnly 'org.projectlombok:lombok'
