--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ javaVersions {
 
 
 allprojects {
-	apply plugin: 'org.springframework.boot'
+	//	apply plugin: 'org.springframework.boot'
 	apply plugin: 'io.spring.dependency-management'
 
 	apply plugin: 'com.palantir.baseline-error-prone'
@@ -40,16 +40,15 @@ allprojects {
 	apply plugin: 'com.palantir.java-format' // spotless使用的格式规则，单独升级可适配最新的java版本语法
 	apply plugin: 'com.diffplug.spotless' // spotless格式化工具
 	apply plugin: 'com.palantir.baseline-encoding'
-	apply plugin: 'java'
 	apply plugin: 'java-library'
 
-	bootJar {
-		enabled = false
-	}
-
-	bootBuildImage {
-		enabled = false
-	}
+	//	bootJar {
+	//		enabled = false
+	//	}
+	//
+	//	bootBuildImage {
+	//		enabled = false
+	//	}
 
 	java {
 		toolchain {
@@ -116,24 +115,24 @@ allprojects {
 		}
 	}
 
-	dependencies {
-		//		implementation('me.ziyframework:core-spring-boot-starter') {
-		//			changing = false
-		//		}
+	//	dependencies {
+	//		implementation('me.ziyframework:core-spring-boot-starter') {
+	//			changing = true
+	//		}
 
-		implementation 'org.springframework.boot:spring-boot-starter'
-		compileOnly 'org.projectlombok:lombok'
-		developmentOnly 'org.springframework.boot:spring-boot-devtools'
-		developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-		annotationProcessor 'org.projectlombok:lombok'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	}
+	//		implementation 'org.springframework.boot:spring-boot-starter'
+	//		compileOnly 'org.projectlombok:lombok'
+	//		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	//		developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+	//		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	//		annotationProcessor 'org.projectlombok:lombok'
+	//		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	//	}
 
-	test {
-		useJUnitPlatform()
-	}
+	//	test {
+	//		useJUnitPlatform()
+	//	}
 }
 
 // 应用gradle
