--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import com.diffplug.spotless.LineEnding
-
 buildscript {
 	repositories {
 		gradlePluginPortal()
@@ -18,37 +16,40 @@ buildscript {
 
 group = 'me.template'
 version = '0.0.1-SNAPSHOT'
-def javaVersion = 17
 
 apply plugin: 'com.palantir.baseline-config'
 apply plugin: 'com.palantir.baseline-java-versions' // 配置java版本
 apply plugin: 'com.palantir.baseline-idea'
 
-javaVersions {
-	libraryTarget = javaVersion
-	distributionTarget = javaVersion
-	runtime = javaVersion
-}
+//apply plugin: 'io.spring.dependency-management'
+//
+//apply plugin: 'com.palantir.baseline-error-prone'
+//apply plugin: 'com.palantir.baseline-checkstyle'
+//apply plugin: 'com.palantir.java-format' // spotless使用的格式规则，单独升级可适配最新的java版本语法
+//apply plugin: 'com.diffplug.spotless' // spotless格式化工具
+//apply plugin: 'com.palantir.baseline-encoding'
+//apply plugin: 'java-library'
+
+//javaVersions {
+//	libraryTarget = javaVersion
+//	distributionTarget = javaVersion
+//	runtime = javaVersion
+//}
 
 
 allprojects {
-	//	apply plugin: 'org.springframework.boot'
-	apply plugin: 'io.spring.dependency-management'
 
-	apply plugin: 'com.palantir.baseline-error-prone'
-	apply plugin: 'com.palantir.baseline-checkstyle'
-	apply plugin: 'com.palantir.java-format' // spotless使用的格式规则，单独升级可适配最新的java版本语法
-	apply plugin: 'com.diffplug.spotless' // spotless格式化工具
-	apply plugin: 'com.palantir.baseline-encoding'
-	apply plugin: 'java-library'
+}
 
-	//	bootJar {
-	//		enabled = false
-	//	}
-	//
-	//	bootBuildImage {
-	//		enabled = false
-	//	}
+// 应用gradle
+new File("${rootDir}/scripts").eachFile(groovy.io.FileType.FILES) {
+	if (it.name.endsWith('.gradle')) {
+		println "apply gradle script:${it.absolutePath}"
+		apply from: it.absolutePath
+	}
+}
+
+/*
 
 	java {
 		toolchain {
@@ -65,7 +66,6 @@ allprojects {
 	spotless {
 		// Java
 		java {
-			target fileTree('.') { include 'src/**/*.java'; exclude('**/*Proto.java') }
 			lineEndings LineEnding.UNIX
 			endWithNewline()
 			indentWithSpaces 4
@@ -133,12 +133,4 @@ allprojects {
 	//	test {
 	//		useJUnitPlatform()
 	//	}
-}
-
-// 应用gradle
-new File("${rootDir}/scripts").eachFile(groovy.io.FileType.FILES) {
-	if (it.name.endsWith('.gradle')) {
-		println "apply gradle script:${it.absolutePath}"
-		apply from: it.absolutePath
-	}
-}
+ */
