--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,11 @@
-buildscript {
-	repositories {
-		gradlePluginPortal()
-		mavenLocal()
-		mavenCentral()
-	}
-
-	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:3.3.3' // spring boot 版本
-		classpath 'io.spring.gradle:dependency-management-plugin:1.1.6'
-		classpath 'com.palantir.baseline:gradle-baseline-java:5.65.0'
-		classpath 'com.palantir.javaformat:gradle-palantir-java-format:2.50.0'
-		classpath 'com.diffplug.spotless:spotless-plugin-gradle:6.25.0'
-	}
+plugins {
+	id("base")
+	id("com.palantir.baseline-config")
+	id("com.palantir.baseline-idea")
 }
 
-group = 'me.template'
-version = '0.0.1-SNAPSHOT'
-
-apply plugin: 'com.palantir.baseline-config'
-apply plugin: 'com.palantir.baseline-java-versions' // 配置java版本
-apply plugin: 'com.palantir.baseline-idea'
-
-//apply plugin: 'io.spring.dependency-management'
-//
-//apply plugin: 'com.palantir.baseline-error-prone'
-//apply plugin: 'com.palantir.baseline-checkstyle'
-//apply plugin: 'com.palantir.java-format' // spotless使用的格式规则，单独升级可适配最新的java版本语法
-//apply plugin: 'com.diffplug.spotless' // spotless格式化工具
-//apply plugin: 'com.palantir.baseline-encoding'
-//apply plugin: 'java-library'
-
-//javaVersions {
-//	libraryTarget = javaVersion
-//	distributionTarget = javaVersion
-//	runtime = javaVersion
-//}
-
-
 allprojects {
-
+	group = 'me.template'
 }
 
 // 应用gradle
