--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,12 @@
+####### Plugin的版本定义 #######
+io.spring.dependency-management.version=1.1.7
+org.springframework.boot.version=3.3.3
+
+com.palantir.baseline.version=6.9.0
+
+com.palantir.java-format.version=2.50.0
+com.diffplug.spotless.version=7.0.1
+
 # 配置gradlew的运行参数(运行行为)
 # 打开守护进程, 服务器上自动构建需要关闭(gradlew --no-daemon)
 org.gradle.daemon=true
