--- a/script/gradle/dependenciesManagement.gradle
+++ b/script/gradle/dependenciesManagement.gradle
@@ -1,7 +1,7 @@
-apply plugin: 'io.spring.dependency-management'
-
-dependenciesManagement {
-    imports {
-        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-    }
-}
+//apply plugin: 'io.spring.dependency-management'
+//
+//dependenciesManagement {
+//    imports {
+//        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+//    }
+//}
