--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,3 +1,11 @@
+plugins {
+    id("org.springframework.boot")
+    id("io.spring.dependency-management")
+}
+
+dependencyManagement {
+
+}
 
 applyFromGradleFiles(new File(rootDir, "share"))
 
