--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,10 +1,6 @@
 plugins {
-    id("org.springframework.boot")
-    id("io.spring.dependency-management")
-}
-
-dependencyManagement {
-
+    id 'io.spring.dependency-management' version '1.1.7' apply false
+    id 'org.springframework.boot' version '3.3.3' apply false
 }
 
 applyFromGradleFiles(new File(rootDir, "share"))
