--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 plugins {
-	id("base")
-	id("com.palantir.baseline-config")
-	id("com.palantir.baseline-idea")
+	id 'java-basic'
+	id 'baseline-base'
+	id 'baseline'
 }
 
 allprojects {
 	group = 'me.template'
 }
 
-applyFromGradleFiles(new File(rootDir, "script/gradle"))
+// 仓库配置
+repositories {
+	mavenLocal()
+	gradlePluginPortal()
+	mavenCentral()
+	maven { url 'https://maven.aliyun.com/repository/public/' }
+}
 
 /**
  * 将指定目录下的所有直接.gradle文件进行apply from:应用.
@@ -24,89 +30,3 @@ def applyFromGradleFiles(File dir) {
 		}
 	}
 }
-
-/*
-
-	java {
-		toolchain {
-			languageVersion = JavaLanguageVersion.of(javaVersion)
-		}
-	}
-
-	configurations {
-		compileOnly {
-			extendsFrom annotationProcessor
-		}
-	}
-
-	spotless {
-		// Java
-		java {
-			lineEndings LineEnding.UNIX
-			endWithNewline()
-			indentWithSpaces 4
-			formatAnnotations()
-			custom 'Lambda fix', { it.replace('} )', '})').replace('} ,', '},') }
-		}
-
-		groovyGradle {
-			greclipse()
-		}
-	}
-
-	tasks.withType(JavaCompile).configureEach(new Action<Task>() {
-				void execute(Task task) {
-					// 禁止baseline errorprone编译规则
-					task.options.errorprone.disable 'InvalidBlockTag', 'StrictUnusedVariable', 'EmptyCatch'
-				}
-			})
-
-	repositories {
-		mavenLocal()
-		mavenCentral()
-	}
-
-	dependencyManagement {
-		// hutool工具类
-		imports {
-			mavenBom 'cn.hutool:hutool-bom:5.8.35'
-		}
-		dependencies {
-			dependencySet(group: 'me.ziyframework', version: '3.3.3') {
-				entry("core-spring-boot-starter")
-				entry("redis-spring-boot-starter")
-				entry("web-spring-boot-starter")
-			}
-
-			// 常用工具类
-			dependency 'com.google.guava:guava:33.4.0-jre'
-
-			dependencySet(group: 'cn.dev33', version: '1.39.0') {
-				entry("sa-token-spring-boot-starter")
-			}
-
-			dependencySet(group: 'org.springdoc', version: '2.8.1') {
-				entry("springdoc-openapi-starter-webmvc-ui")
-			}
-		}
-	}
-
-	//	dependencies {
-	//		implementation('me.ziyframework:core-spring-boot-starter') {
-	//			changing = true
-	//		}
-
-	//		implementation 'org.springframework.boot:spring-boot-starter'
-	//		compileOnly 'org.projectlombok:lombok'
-	//		developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	//		developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-	//		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	//		annotationProcessor 'org.projectlombok:lombok'
-	//		testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	//	}
-
-	//	test {
-	//		useJUnitPlatform()
-	//	}
- */
