--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
     // 代码检查插件
     id 'com.palantir.baseline-error-prone'
     id 'com.palantir.baseline-checkstyle'
