--- a/example/demo1/demo1.gradle
+++ b/example/demo1/demo1.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-basic'
     id 'baseline'
     id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
 
 dependencies {
