--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'java-library'
     // 代码检查插件
     id 'com.palantir.baseline-error-prone'
@@ -14,6 +15,10 @@ plugins {
 
 description = "palantir baseline代码规范化插件"
 
+dependencies {
+    compileOnly 'com.google.errorprone:error_prone_check_api:2.36.0'
+}
+
 // 代码自动格式化配置.
 spotless {
     java {
@@ -27,10 +32,3 @@ spotless {
         greclipse()
     }
 }
-
-tasks.withType(JavaCompile).configureEach(new Action<Task>() {
-    void execute(Task task) {
-        // 禁止baseline errorprone编译规则
-//        task.options.errorprone.disable 'InvalidBlockTag', 'StrictUnusedVariable', 'EmptyCatch'
-    }
-})
