--- a/buildSrc/src/main/groovy/spring-boot-support.gradle
+++ b/buildSrc/src/main/groovy/spring-boot-support.gradle
@@ -8,7 +8,7 @@ description = 'spring-boot支撑插件'
 
 dependencies {
 
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
     // SpringBoot开发基础依赖项
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
