--- a/example/demo1/demo1.gradle
+++ b/example/demo1/demo1.gradle
@@ -2,5 +2,8 @@ plugins {
     id 'java-basic'
     id 'baseline'
     id 'spring-boot-support'
-    id 'com.palantir.baseline-checkstyle'
+}
+
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
