--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,11 +9,7 @@ dependencies {
     implementation "io.spring.dependency-management:io.spring.dependency-management.gradle.plugin:1.1.7"
     implementation "org.springframework.boot:org.springframework.boot.gradle.plugin:3.3.3" // SpringBoot版本
 
-    implementation "com.palantir.baseline-config:com.palantir.baseline-config.gradle.plugin:6.9.0"
-    implementation "com.palantir.baseline-idea:com.palantir.baseline-idea.gradle.plugin:6.9.0"
-    implementation "com.palantir.baseline-error-prone:com.palantir.baseline-error-prone.gradle.plugin:6.9.0"
-    implementation "com.palantir.baseline-checkstyle:com.palantir.baseline-checkstyle.gradle.plugin:6.9.0"
-    implementation "com.palantir.baseline-exact-dependencies:com.palantir.baseline-exact-dependencies.gradle.plugin:6.9.0"
+    implementation "com.palantir.baseline:com.palantir.baseline.gradle.plugin:5.65.0"
 
     implementation "com.palantir.java-format:com.palantir.java-format.gradle.plugin:2.50.0"
     implementation "com.diffplug.spotless:com.diffplug.spotless.gradle.plugin:6.25.0"
