--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 dependencies {
-    implementation gradleApi() // 使用 Gradle API
-    implementation localGroovy() // 使用 Groovy
+    implementation gradleApi()
+    implementation localGroovy()
 
     implementation "io.spring.dependency-management:io.spring.dependency-management.gradle.plugin:1.1.7"
     implementation "org.springframework.boot:org.springframework.boot.gradle.plugin:3.3.3" // SpringBoot版本
 
-    implementation "com.palantir.baseline:com.palantir.baseline.gradle.plugin:5.65.0"
+    implementation "com.palantir.baseline:com.palantir.baseline.gradle.plugin:6.11.0"
 
     implementation "com.palantir.java-format:com.palantir.java-format.gradle.plugin:2.50.0"
     implementation "com.diffplug.spotless:com.diffplug.spotless.gradle.plugin:6.25.0"
