--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -5,11 +5,11 @@ plugins {
 
 description = "Java开发基础包，引入该包即可使用Java开发基础功能"
 
-//java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(21)
-//    }
-//}
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 configurations {
     compileOnly {
