fix: 修复baseline在buildSrc中引入问题

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java-basic'
 	id 'com.palantir.baseline-config'
-	id 'com.palantir.baseline-idea'
+	id 'baseline'
 }
 
 allprojects {
