--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -6,8 +6,9 @@ plugins {
 description = "Java开发基础包，引入该包即可使用Java开发基础功能"
 
 java {
+    // 管理gradle构建过程中的JDK版本，推荐使用，避免因为Gradle构建中JDK版本不同导致的问题
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+//        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
