reactor：将仓库配置移动到java-basic.gradle中

--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -26,3 +26,11 @@ dependencies {
     compileOnly 'org.immutables:value:2.10.1'
     annotationProcessor 'org.immutables:value:2.10.1'
 }
+
+// 仓库配置
+repositories {
+    mavenLocal()
+    gradlePluginPortal()
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    mavenCentral()
+}
