--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java-library'
     id 'com.palantir.baseline-idea'
     // 代码检查插件
+    id 'net.ltgt.errorprone'
     id 'com.palantir.baseline-error-prone'
     id 'com.palantir.baseline-checkstyle'
 
