feat: 关闭工具链JDK自动下载

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 # 配置gradlew的运行参数(运行行为)
+# 关闭工具链自动下载JDK
+org.gradle.java.installations.auto-download=false
 # 打开守护进程, 服务器上自动构建需要关闭(gradlew --no-daemon)
 org.gradle.daemon=true
 # 开启并行编译
