--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -7,6 +7,8 @@ description = "Java开发基础包，引入该包即可使用Java开发基础功
 
 java {
     // 管理gradle构建过程中的JDK版本，推荐使用，避免因为Gradle构建中JDK版本不同导致的问题
+    // 输出工具链信息: ./gradlew -q javaToolchains
+    // 已关闭自动下载,见gradle.properties
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
