--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -2,9 +2,11 @@ plugins {
     id 'java'
     id 'java-library'
     id 'com.palantir.baseline-idea'
-    // 代码检查插件
+    // 代码静态检查插件
     id 'net.ltgt.errorprone'
     id 'com.palantir.baseline-error-prone'
+
+    // 代码格式检查插件
     id 'com.palantir.baseline-checkstyle'
 
     // 代码自动格式化插件
