--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -28,6 +28,7 @@ dependencies {
 // 仓库配置
 repositories {
     gradlePluginPortal()
+    maven { url 'https://ziyframework.me/nexus/repository/maven-public' }
     maven { url 'https://maven.aliyun.com/repository/public/' }
     mavenCentral()
     mavenLocal()
