引入smartdoc无侵入文档生成工具

--- a/buildSrc/src/main/groovy/doc.gradle
+++ b/buildSrc/src/main/groovy/doc.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.ly.smart-doc"
 }
 
+description = "smart-doc插件"
+
 smartdoc {
     configFile = file("src/main/resources/doc.json")
 }
