--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -5,6 +5,9 @@ plugins {
     // 代码静态检查插件
     id 'com.palantir.baseline-error-prone'
 
+    // 引入nullaway进行Jspecity分析检查（这里采用了baseline提出的封装引入，避免手动引入uber.nullaway导致的兼容问题）
+    id 'com.palantir.baseline-null-away'
+
     // 代码格式检查插件
     id 'com.palantir.baseline-checkstyle'
 
@@ -23,6 +26,9 @@ dependencies {
     implementation 'com.palantir.safe-logging:logger:3.7.0'
     implementation 'com.palantir.safe-logging:preconditions:3.7.0'
     testImplementation 'com.palantir.safe-logging:preconditions-assertj:3.7.0'
+
+    // JSpecify: null检查
+    implementation 'org.jspecify:jspecify:1.0.0'
 }
 
 // 代码自动格式化配置.
