将SpringBoot升级到4.0版本

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -7,15 +7,12 @@ dependencies {
     implementation localGroovy()
 
     implementation "io.spring.dependency-management:io.spring.dependency-management.gradle.plugin:1.1.7"
-    implementation "org.springframework.boot:org.springframework.boot.gradle.plugin:3.3.3" // SpringBoot版本
+    implementation "org.springframework.boot:org.springframework.boot.gradle.plugin:4.0.0-M1" // SpringBoot版本
 
     implementation "com.palantir.baseline:com.palantir.baseline.gradle.plugin:6.52.0"
 
     // palantir java-format
     implementation "com.palantir.java-format:com.palantir.java-format.gradle.plugin:2.73.0"
-
-    // spotless 这个暂时无法升级到7.x版本，因为palantir java-format中对spotless处理的spotless库不支持7.x
-    // 需要等到com.palantir.java-format.gradle.plugin升级
     implementation "com.diffplug.spotless:com.diffplug.spotless.gradle.plugin:7.2.1"
 
     // smart doc
