重新调整模板

--- a/example/demo1/demo1.gradle
+++ b/example/demo1/demo1.gradle
@@ -5,5 +5,5 @@ plugins {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'me.ziyframework:web-spring-boot-starter'
 }
