--- a/buildSrc/src/main/groovy/java-basic.gradle
+++ b/buildSrc/src/main/groovy/java-basic.gradle
@@ -23,7 +23,7 @@ tasks.withType(JavaCompile).configureEach {
 // 仓库配置
 repositories {
     gradlePluginPortal()
-    maven { url 'https://ziyframework.me/nexus/repository/maven-public' }
+    maven { url 'https://nexus.ziyframework.me/repository/maven-public' }
     maven { url 'https://maven.aliyun.com/repository/public/' }
     mavenCentral()
     mavenLocal()
