--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -38,7 +38,7 @@ spotless {
     java {
         lineEndings com.diffplug.spotless.LineEnding.UNIX
         endWithNewline()
-        indentWithSpaces 4
+        leadingTabsToSpaces 4
         trimTrailingWhitespace()
         custom 'Lambda fix', { it.replace('} )', '})').replace('} ,', '},') }
     }
