--- a/buildSrc/src/main/groovy/baseline.gradle
+++ b/buildSrc/src/main/groovy/baseline.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'java-library'
-    id 'dependencies-management'
+    id 'dependency-management'
 
     id 'com.palantir.baseline-idea'
     // 代码静态检查插件
