--- a/buildSrc/src/main/groovy/spring-boot-support.gradle
+++ b/buildSrc/src/main/groovy/spring-boot-support.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.springframework.boot'
-    id 'dependencies-management'
+    id 'dependency-management'
 }
 
 description = 'spring-boot支撑插件'
