--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
+
+springBoot=4.0.0-M2
