--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-	id 'java-basic'
-	id 'com.palantir.baseline-config'
-	id 'baseline'
+    id 'java-basic'
+    id 'com.palantir.baseline-config'
+    id 'baseline'
 }
 
 allprojects {
-	group = 'me.test'
+    group = 'test'
 }
 
 applyFromGradleFiles(new File("/project/script/gradle"))
@@ -14,13 +14,13 @@ applyFromGradleFiles(new File("/project/script/gradle"))
  * 将指定目录下的所有直接.gradle文件进行apply from:应用.
  */
 def applyFromGradleFiles(File dir) {
-	if (!dir.isDirectory()) {
-		return
-	}
-	dir.eachFileRecurse { File file ->
-		if (file.name.endsWith(".gradle")) {
-			println "apply from: ${file.name}"
-			apply from: file
-		}
-	}
+    if (!dir.isDirectory()) {
+        return
+    }
+    dir.eachFileRecurse { File file ->
+        if (file.name.endsWith(".gradle")) {
+            println "apply from: ${file.name}"
+            apply from: file
+        }
+    }
 }
