--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
 
 rootProject.name = rootDir.name
 
-include("example:demo1")
+include("module:web")
 
 rootProject.children.each { p ->
     walk(p) { project, name ->
