--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,13 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
+# SpringBoot版本
 springBoot=4.0.0-M2
+# 版本管理依赖插件版本
+dependencyManagement=1.1.7
+# 基线版本
+baseline=6.52.0
+# java代码格式插件版本
+javaFormat=2.73.0
+# spotless插件版本
+spotless=7.2.1
