--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+  -javaagent:/home/ziy/projects/template/.agents/palantir-java-format-fix-agent-1.0.jar
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
