--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-  -javaagent:/home/ziy/projects/palantir-java-format-fix-agent/build/libs/palantir-java-format-fix-agent-1.0.jar
+  -javaagent:.agent/palantir-java-format-fix-agent-1.0.jar
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
