--- a/gradle.properties
+++ b/gradle.properties
@@ -7,18 +7,21 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 # 开启编译缓存
 org.gradle.caching=true
+
+systemProp.gradle.wrapperUserProperties=true
+
 # 解决java-format插件导致的模块化问题
 org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-  -javaagent:.agent/palantir-java-format-fix-agent-1.0.jar
+  -javaagent:/home/ziy/project/template/.agents/palantir-java-format-fix-agent-1.0.jar
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
 # SpringBoot版本
-springBoot=4.0.0-M2
+springBoot=4.0.0
 # 版本管理依赖插件版本
 dependencyManagement=1.1.7
 # 基线版本
