--- a/gradle.properties
+++ b/gradle.properties
@@ -2,24 +2,24 @@
 # 关闭工具链自动下载JDK
 org.gradle.java.installations.auto-download=false
 # 打开守护进程, 服务器上自动构建需要关闭(gradlew --no-daemon)
-org.gradle.daemon=true
+org.gradle.daemon=false
 # 开启并行编译
-org.gradle.parallel=true
+org.gradle.parallel=false
 # 开启编译缓存
 org.gradle.caching=true
-
-systemProp.gradle.wrapperUserProperties=true
-
 # 解决java-format插件导致的模块化问题
 org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
-  -javaagent:/home/ziy/project/template/.agents/palantir-java-format-fix-agent-1.0.jar
+  -Xmx512m -XX:MaxMetaspaceSize=384m
+# 用于修复palantir-java-format在gradle 9+版本中的兼容问题
+org.gradle.jvmargs=-javaagent:/home/ziy/projects/palantir-java-format-fix-agent/build/libs/palantir-java-format-fix-agent-1.0.jar
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
+########################### 版本管理 ##########################
 # SpringBoot版本
 springBoot=4.0.0
 # 版本管理依赖插件版本
