--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAME
   --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
   -Xmx512m -XX:MaxMetaspaceSize=384m
 # 用于修复palantir-java-format在gradle 9+版本中的兼容问题
-org.gradle.jvmargs=-javaagent:/home/ziy/projects/palantir-java-format-fix-agent/build/libs/palantir-java-format-fix-agent-1.0.jar
+org.gradle.jvmargs=-javaagent:/home/ziy/project/template/.agents/palantir-java-format-fix-agent.jar
 # 允许格式化gradle文件
 com.palantir.baseline-format.gradle-files=true
 
