--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 # 关闭工具链自动下载JDK
 org.gradle.java.installations.auto-download=false
 # 打开守护进程, 服务器上自动构建需要关闭(gradlew --no-daemon)
-org.gradle.daemon=false
+org.gradle.daemon=true
 # 开启并行编译
-org.gradle.parallel=false
+org.gradle.parallel=true
 # 开启编译缓存
 org.gradle.caching=true
 # 解决java-format插件导致的模块化问题
